# Custom-agent

./: .env.example  .gitignore  README.md  config.yaml  pyproject.toml  run.ps1  streamlit_app.py
.streamlit/: config.toml
app/: __init__.py  config.py  database.py  errors.py  launcher.py  main.py  schemas.py  vectorstores.py
app/services/: agent.py  documents.py  memory.py
app/ui/: __init__.py  api_client.py  styles.py
tests/: conftest.py  test_api.py  test_config.py  test_database.py  test_launcher.py  test_memory.py  test_services.py  test_ui_api_client.py  test_vectorstores.py
