[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-rag-agent"
version = "0.1.0"
description = "FastAPI RAG agent with Qwen, LangChain, Chroma, and durable memory"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "chromadb>=1.0,<2",
  "fastapi>=0.115,<1",
  "httpx>=0.28,<1",
  "langchain>=1.0,<2",
  "langchain-chroma>=0.2,<2",
  "langchain-openai>=0.3,<2",
  "langchain-text-splitters>=0.3,<2",
  "pydantic-settings>=2.7,<3",
  "python-dotenv>=1.0,<2",
  "python-multipart>=0.0.20,<1",
  "PyYAML>=6.0,<7",
  "streamlit>=1.45,<2",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.25,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
